# MultiSuSiE

./: README.md  environment.yml  install.sh  pyproject.toml  requirements.txt  susiepy_ss.py  tests.py
example_data/: geno_CEU.txt  geno_JPT.txt  geno_YRI.txt  maf_CEU.txt  maf_JPT.txt  maf_YRI.txt  snp_meta.csv
examples/: example.html  example.ipynb  example_for_install_script.py
src/MultiSuSiE/: __init__.py  susiepy.py  susiepy_ss.py
